<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBg"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/frameLayout11"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.ad_create.AdCreateFragment">

    <TextView
        android:id="@+id/tv_adCreate_pageTitle"
        style="@style/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/create_pagetitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_adCreate_to_profile_teacher"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="@color/mainBg"
        android:cropToPadding="true"
        android:filterTouchesWhenObscured="false"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_arrow_circle_left_24"
        app:layout_constraintBottom_toBottomOf="@+id/tv_adCreate_pageTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_adCreate_pageTitle" />

    <EditText
        style="@style/formEditText"
        android:id="@+id/et_adCreate_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/create_hint_adtitle"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_adCreate_pageTitle" />

    <!--
    <Button
        android:id="@+id/button_adCreate_takePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Prendre une photo"
        android:textSize="12sp"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/et_adCreate_title"
        app:layout_constraintTop_toBottomOf="@+id/et_adCreate_title" />

    <Button
        android:id="@+id/button_adCreate_chosePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="Sélectionner une photo"
        android:textSize="12sp"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/button_adCreate_takePicture"
        app:layout_constraintStart_toEndOf="@+id/button_adCreate_takePicture"
        app:layout_constraintTop_toTopOf="@+id/button_adCreate_takePicture" />
        -->


    <EditText
        android:id="@+id/et_adCreate_photo"
        style="@style/formEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/create_hint_illustration_url"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/et_adCreate_ad"
        app:layout_constraintStart_toStartOf="@+id/et_adCreate_ad"
        app:layout_constraintTop_toBottomOf="@+id/et_adCreate_ad" />


    <EditText
        android:id="@+id/et_adCreate_price"
        style="@style/formEditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/et_adCreate_title"
        app:layout_constraintTop_toBottomOf="@+id/et_adCreate_title" />

    <TextView
        android:id="@+id/tv_adCreate_label_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_label_price_per_course"
        app:layout_constraintBottom_toBottomOf="@+id/et_adCreate_price"
        app:layout_constraintStart_toEndOf="@+id/et_adCreate_price"
        app:layout_constraintTop_toTopOf="@+id/et_adCreate_price" />

    <EditText
        style="@style/formEditText"
        android:id="@+id/et_adCreate_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/create_hint_residence_city"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_adCreate_price"
        app:layout_constraintTop_toBottomOf="@+id/et_adCreate_price" />

    <RadioGroup
        android:id="@+id/rg_adCreate_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/et_adCreate_location"
        app:layout_constraintTop_toBottomOf="@+id/et_adCreate_location">

        <RadioButton
            android:id="@+id/rb_adCreate_myHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_label_myhome"
            android:checked="true"
            style="@style/radioButton"
            />

        <RadioButton
            android:id="@+id/rb_adCreate_yourHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_label_yourhome"
            style="@style/radioButton"
            />

        <RadioButton
            android:id="@+id/rb_adCreate_thirdPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_label_publicplace"
            style="@style/radioButton"
            />


    </RadioGroup>

    <EditText
        android:id="@+id/et_adCreate_ad"
        style="@style/formEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:gravity="fill"
        android:hint="@string/create_hint_adcontent"
        android:inputType="textMultiLine"
        android:minHeight="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rg_adCreate_place"
        app:layout_constraintTop_toBottomOf="@+id/rg_adCreate_place" />

    <Button
        android:id="@+id/button_adCreate_createAd"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="24dp"
        android:text="@string/create_as_button_label_post_ad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_adCreate_photo" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
