<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBg">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile_teacher.ProfileTeacherFragment">


        <TextView
            android:id="@+id/tv_profileTeacher_pageTitle"
            style="@style/pageTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/profile_teacher_account_of"
            app:layout_constraintBottom_toBottomOf="@+id/button_profileTeacher_backToMain"
            app:layout_constraintEnd_toStartOf="@+id/button_profileTeacher_logOutUser"
            app:layout_constraintStart_toEndOf="@+id/button_profileTeacher_backToMain"
            app:layout_constraintTop_toTopOf="@+id/button_profileTeacher_backToMain" />

        <ImageButton
            android:id="@+id/button_profileTeacher_backToMain"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/mainBg"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_arrow_circle_left_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/button_profileTeacher_logOutUser"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/mainBg"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_logout_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_profileTeacher_subtitle_myAd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/profile_learner_subtitle_myad"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/button_profileTeacher_backToMain"
            app:layout_constraintTop_toBottomOf="@+id/button_profileTeacher_backToMain" />

        <TextView
            android:id="@+id/tv_profileTeacher_adTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="24dp"
            tools:text="Cours de sciences niveau Collège/Lycée"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_profileTeacher_adPrice"
            app:layout_constraintStart_toStartOf="@+id/tv_profileTeacher_subtitle_myAd"
            app:layout_constraintTop_toBottomOf="@+id/tv_profileTeacher_subtitle_myAd" />

        <TextView
            android:id="@+id/tv_profileTeacher_adPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            tools:text="30 €"
            android:textSize="18sp"

            app:layout_constraintBottom_toBottomOf="@+id/tv_profileTeacher_adTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_profileTeacher_adTitle" />

        <TextView
            android:id="@+id/tv_profileTeacher_ad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="24dp"
            android:ellipsize="end"
            android:maxLines="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_profileTeacher_adTitle"
            app:layout_constraintTop_toBottomOf="@+id/tv_profileTeacher_adTitle"
            tools:text="Cours particuliers de sciences pour collégiens et lycéens. Enseignant expérimenté, je propose des séances personnalisées, claires et interactives. Préparation aux examens et suivi individualisé. Flexibilité des horaires. Réservez votre place dès maintenant pour exceller en sciences ! " />

        <Button
            android:id="@+id/button_profileTeacher_toCreateOrUpdateAd"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            tools:text="Modifier mon annonce"
            app:layout_constraintEnd_toEndOf="@+id/tv_profileTeacher_ad"
            app:layout_constraintStart_toStartOf="@+id/tv_profileTeacher_ad"
            app:layout_constraintTop_toBottomOf="@+id/tv_profileTeacher_ad" />

        <TextView
            android:id="@+id/tv_profileTeacher_subtitle_myConversations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="20sp"
            android:text="@string/profile_learner_subtitle_myconversations"
            app:layout_constraintStart_toStartOf="@+id/tv_profileTeacher_ad"
            app:layout_constraintTop_toBottomOf="@+id/button_profileTeacher_toCreateOrUpdateAd" />

        <ListView
            android:id="@+id/lv_profileTeacher_conversations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profileTeacher_subtitle_myConversations" />

        <TextView
            android:id="@+id/tv_profileTeacher_noAds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/profile_learner_you_have_not_posted_ads"
            android:textAlignment="center"
            android:textStyle="italic"
            android:visibility="gone"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/button_profileTeacher_toCreateOrUpdateAd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profileTeacher_subtitle_myAd" />

        <TextView
            android:id="@+id/tv_profileTeacher_noMessages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vous n'avez pas encore de conversations!"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textAlignment="center"
            android:textStyle="italic"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profileTeacher_subtitle_myConversations" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>